Worked on the add habit form.

--- a/src/components/habitList/habitList.css
+++ b/src/components/habitList/habitList.css
@@ -6,3 +6,10 @@
   box-shadow: 0 3px 10px 1px gray;
   background-color: whitesmoke;
 }
+
+.item {
+  color: green;
+}
+.item:hover {
+  background-color: black;
+}
