--- a/src/components/addHabitForm/addHabitForm.css
+++ b/src/components/addHabitForm/addHabitForm.css
@@ -4,34 +4,55 @@
   right: 0;
   top: 0;
   bottom: 0;
-  padding-top: 40%;
+  padding-top: 30%;
   background-color: rgba(0,0,0,0.5);
 }
 
 .formContainer {
-  width: 300px;
+  width: 400px;
   margin: 0 auto;
   text-align: center;
 }
 
 .formContainer * {
   margin-bottom: 10px;
+  outline: none;
 }
 
 .formContainer input {
-  font-size: 1.4em;
-  width: 194px;
+  font-size: 2em;
+  width: 394px;
   text-align: center;
+  border: none;
+  border-bottom: 1px solid white;
+  color: white;
+  background-color: transparent;
 }
 
 .formContainer select {
-  font-size: 20px;
-  width: 200px;
+  font-size: 2em;
+  width: 400px;
+  border: none;
+  border-bottom: 1px solid white;
+  color: white;
+  background-color: transparent;
+  text-align-last: center;
+}
+
+.formContainer output {
+  font-size: 1.5em;
+  width: 400px;
+  background-color: transparent;
+  color: white;
+  margin-bottom: 2em;
+  display: inline-block;
+  height: 2em;
+  min-height: 2em;
 }
 
 .close {
   color: white;
-  margin-left: 80%;
+  margin-left: 90%;
   font-size: 1em;
   border: 1px solid transparent;
   border-radius: 100%;
