--- a/src/components/snakeGraph/snakeGraph.css
+++ b/src/components/snakeGraph/snakeGraph.css
@@ -1,8 +1,13 @@
 .svg-graph {
   padding-left: 50px;
+  background-color: black;
+  position: absolute;
+  right: 0;
+  left: 0;
 }
 
 .line-graph {
   fill: none;
-  stroke: black;
+  stroke: url('#RectGradient');
+  stroke-width: 2;
 }
