Partway built the record entry component

--- a/src/css/globalStyles.css
+++ b/src/css/globalStyles.css
@@ -10,3 +10,12 @@ button:hover {
 .text-center {
   text-align: center;
 }
+
+input, textarea {
+  outline: none;
+}
+
+select {
+  outline: none;
+  text-align-last: center;
+}
